--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Famdent - Help App</string>
+    <string name="app_name">Famdent - Visitor App</string>
 
 
     <!-- EditText Error Strings -->
@@ -110,9 +110,7 @@
 
 
     <string name="dialog_text_add_notes">Add Notes</string>
-    <string name="dialog_text_enter_otp">Enter the OTP sent to your mobile number (TEST OTP:
-        123456)
-    </string>
+    <string name="dialog_text_enter_otp">Enter the OTP sent to your mobile number</string>
 
 
     <string name="progress_dialog_text_loading">Loading&#8230;</string>
