--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="dialog_action_ignore">IGNORE</string>
     <string name="dialog_action_update">UPDATE</string>
     <string name="dialog_action_close">CLOSE</string>
+    <string name="dialog_action_show_all">SHOW ALL</string>
 
 
 </resources>
