Completed with version v1.2.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,7 @@
     <string name="dialog_action_show_all">SHOW ALL</string>
 
 
+    <string name="facebook_app_id">1050784248336887</string>
+
+
 </resources>
